force-app/main/default/objects/Bus_Ticket__c/Bus_Ticket__c.object-meta.xml
<CustomObject>
    <description>Will be the Ticket link between it and ths Customer (Contact) record.</description>
    <label>Bus Ticket</label>
    <nameField>
        <displayFormat>TKT-{000000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bus Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>