force-app/main/default/objects/Bus_Ticket__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tracks the active vehicle.</description>
    <inlineHelpText>Tracks the active vehicle.</inlineHelpText>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>BusTickets</relationshipLabel>
    <relationshipName>BusTickets</relationshipName>
    <type>Lookup</type>
</CustomField>