force-app/main/default/objects/Bus_Ticket__c/fields/Passenger__c.field-meta.xml
<CustomField>
    <fullName>Passenger__c</fullName>
    <description>The person who paid for the ticket. Controls security and sharing rules.</description>
    <inlineHelpText>The person who paid for the ticket. Controls security and sharing rules.</inlineHelpText>
    <label>Passenger</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>