force-app/main/default/objects/Bus_Ticket__c/fields/Rider__c.field-meta.xml
<CustomField>
    <fullName>Rider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person actually sitting on the bus. Defaults to the Purchaser if blank, but can be customized!</description>
    <inlineHelpText>The person actually sitting on the bus. Defaults to the Purchaser if blank, but can be customized!</inlineHelpText>
    <label>Rider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RiderTickets</relationshipLabel>
    <relationshipName>RiderTickets</relationshipName>
    <type>Lookup</type>
</CustomField>