force-app/main/default/objects/Bus_Ticket__c/fields/Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>Seat_Number__c</fullName>
    <description>Captures the string descriptor of the chosen seat (e.g., 4A).</description>
    <inlineHelpText>Captures the string descriptor of the chosen seat (e.g., 4A).</inlineHelpText>
    <label>Seat Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>