force-app/main/default/objects/Bus_Ticket__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>The finalized charge processed by your engine.</description>
    <inlineHelpText>The finalized charge processed by your engine.</inlineHelpText>
    <label>Total Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>